--- a/Front/gameStart.html
+++ b/Front/gameStart.html
@@ -52,10 +52,11 @@ async function start() {
             'actions.js',
             'click_Events.js',
             'game_interface.js',
+            'map_mouse_hover.js',
             'map_render.js',
             'map_scroller.js',
             'player_render.js',
-            'gameTurns.js'
+            'gameTurns.js',
         ];
         function InsertGameUrls(){
             document.getElementsByClassName('body')[0].innerHTML = '<link rel="stylesheet" href="style/game_style.css">';
