--- a/Front/game_Образец.html
+++ b/Front/game_Образец.html
@@ -48,7 +48,7 @@ async function start() {
             'map_render.js',
             'map_scroller.js',
             'player_render.js',
-            'gameTurns.js'
+            'gameTurns.js',
         ];
         function InsertGameUrls(){
             document.getElementsByClassName('body')[0].innerHTML = '<link rel="stylesheet" href="style/game_style.css">';
