+деление по командам, -тяжелый баг

--- a/Front/gameStart.html
+++ b/Front/gameStart.html
@@ -47,6 +47,7 @@ async function start() {
         sessionParams.sessionId = result[1];
         sessionParams.login = result[2];
         sessionParams.enemy = result[3];
+        sessionParams.team = result[4];
         let urls = [
             'low_actions.js',
             'actions.js',
