--- a/Front/gameStart.html
+++ b/Front/gameStart.html
@@ -10,12 +10,12 @@
 
 <div class='body' style="text-align-last: center;">
     <div class="blocksLine">
-        <div class="block block1"><div class="img1 img"></div></div>
+        <div class="block block1" onclick="document.location.href='/howtoplay.html'"><div class="img1 img"></div></div>
         <div class="block block2" onclick="start()"><div class="img2 img"></div></div>
         <div class="block block3" onclick="document.location.href='https://github.com/KindaPeaceOfMind/Dueliege/commits?author=KindaPeaceOfMind'"><div class="img3 img"></div></div>
     </div>
     <div class="blocksLine">
-        <div class="block buttonText">Как играть?</div>
+        <div class="block buttonText" onclick="document.location.href='/howtoplay.html'">Как играть?</div>
         <div class="block buttonText" onclick="start()">Старт</div>
         <div class="block buttonText" onclick="document.location.href='https://github.com/KindaPeaceOfMind/Dueliege/commits?author=KindaPeaceOfMind'">Новости разработки</div>
     </div>
