--- a/Front/gameStart.html
+++ b/Front/gameStart.html
@@ -12,11 +12,19 @@
     <div class="blocksLine">
         <div class="block block1" onclick="document.location.href='/howtoplay.html'"><div class="img1 img"></div></div>
         <div class="block block2" onclick="start()"><div class="img2 img"></div></div>
-        <div class="block block3" onclick="document.location.href='https://github.com/KindaPeaceOfMind/Dueliege/commits?author=KindaPeaceOfMind'"><div class="img3 img"></div></div>
+        <div class="block block3" onclick=""><div class="img3 img"></div></div>
     </div>
     <div class="blocksLine">
         <div class="block buttonText" onclick="document.location.href='/howtoplay.html'">Как играть?</div>
         <div class="block buttonText" onclick="start()">Старт</div>
+        <div class="block buttonText" onclick="">Найти комнату</div>
+    </div>
+    <div class="blocksLine">
+        <div class="block block1" onclick="document.location.href='/About.html'"><div class="img1 img"></div></div>
+        <div class="block block3" onclick="document.location.href='https://github.com/KindaPeaceOfMind/Dueliege/commits?author=KindaPeaceOfMind'"><div class="img3 img"></div></div>
+    </div>
+    <div class="blocksLine">
+        <div class="block buttonText" onclick="">Об игре</div>
         <div class="block buttonText" onclick="document.location.href='https://github.com/KindaPeaceOfMind/Dueliege/commits?author=KindaPeaceOfMind'">Новости разработки</div>
     </div>
     <div class="blocksLine">
@@ -38,10 +46,10 @@
         text-align-last: center;
         border-radius: 10px;
         background: #ffffffcc;
-        height: 65vh;
+        height: 80vh;
         box-shadow: 0px 0px 15px #fff;
         padding: 5vh 20px;
-        margin: 5vh 20px;
+        margin: 5vh 20px 0;
         flex-direction: column;
         justify-content: center;
     }
