--- a/Front/howtoplay.html
+++ b/Front/howtoplay.html
@@ -9,35 +9,14 @@
 </head>
 <body>
 <div class="body">
-<div class="h1" style="margin: 20px;">Введение</div>
-    <div class="h2">Происхождение:</div>
-    <div class="h3">
-        Эта инди-игра вдохновлялась крупной хорошей нормальной игрой - divinity: the orignal sin 2.
-        Изначально эта игра была как проба возможностей javascript, языка 
-        который мне очень понравился, т.к. на нём можно сделать всё и везде.
-        Затем, я решил испытать себя - взять это на диплом, то есть
-        принудительно заставить себя доделать этот проект.
-    </div>
-
-    <div class="h2">К слову:</div>
-    <div class="h3">
-        Я бы хотел сделать эту игру интересной, но отсутствие
-        напарников удручает, приходиться разрываться между графикой/ интерфейсами/ скриптами/ текстами/ и тд. Для 
-        добавления разнообразия нужны люди, банально сделать функцию выходит день работы, ибо больше - ментально больно,
-        а потом ты уже не захочешь никогда это писать, на одном проекте приходиться держаться только так: не делая много работ
-        в один день. Это может показаться лентяйством, однако даже для одной функции приходиться продумывать целый обряд.
-        Но в целом было прикольно писать настолько разнообразные задачи, а ещё прикольнее, когда ты смотришь на результат, и ещё
-        комментируешь свою проделанную работу за день несколькими звучными словами.
-    </div>
-
-    <div class="h2">Планируется:</div>
-    <div class="h3">
-        Если продолжу обновлять, то упор будет на тактическую составляющую вроде ловушек, ограждений, телепортов,
-        добавятся анимации, персонажи и скиллы. Всё.
-    </div>
+    
+<div class="backButton" onclick="document.location.href='/start'">Назад</div>
 
 <div class="h1">Список скиллов:</div>
+    <div class="h2">FireBall</div>
+    <div class="h3">Наносит немного урона, но главный плюс - поджигает врага.</div>
 
+<div class="h1">Список скиллов:</div>
     <div class="h2">FireBall</div>
     <div class="h3">Наносит немного урона, но главный плюс - поджигает врага.</div>
 
