+Немного описания на входе

--- a/Front/login.html
+++ b/Front/login.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
 <head>
     <link href="style/login.css" rel="stylesheet">
+    <title>Duelige</title>
+    <meta name="description" content="Сессионная многопользовательская стратегическая онлайн игра с полной ротацией карты!"> 
 </head>
 <body>
+<div class="body0">
+    <h1>Duelige</h1>
+    <h2>Сессионная многопользовательская стратегическая онлайн игра с полной ротацией карты!</h2>
+    <br>
+    <h3>Предскажи победу!</h3>
+    <p>Выигрывают те, кто обладают сверхъестественной силой предсказывать поведение противника.</p>
+    <h3>Играй с друзьями!</h3>
+    <p>Устрой дуэль со своим лучшим другом. Посмотрим, кто из нас сильнее!</p>
+    <h3>Используй окружение!</h3>
+    <p>Каждое препятствие - возможность показать истинное мастерство!</p>
+    <h3>Стратегия!</h3>
+    <p>Устраивай засады, используй уловки, перехитри противника и наслаждайся победой.</p>
+</div>
 <div class="body">
     <div></div>
-    <div class="block">
-        <h2>Регистрация</h2>
-        <div>Логин:</div>
-        <input type="text" id="login" name="login" size="10"><br><br>
-        <div>Пароль:</div>
-        <input type="password" id="password" name="password" size="10"><br><br>
-        <button onclick="authorization()">Зарегестрироваться</button>
-    </div>
     <div class="block">
         <h2>Авторизация</h2>
         <div>Логин:</div>
@@ -21,10 +28,21 @@
         <input type="password" id="password" name="password" size="10"><br><br>
         <button onclick="authorization()">Войти</button>
     </div>
+    <div class="block">
+        <h2>Регистрация</h2>
+        <div>Логин:</div>
+        <input type="text" id="login" name="login" size="10"><br><br>
+        <div>Пароль:</div>
+        <input type="password" id="password" name="password" size="10"><br><br>
+        <button onclick="authorization()">Зарегестрироваться</button>
+    </div>
     <div></div>
 </div>
 <div class="body2">
-<p class="block"><a href="https://vk.com/radikc2003" style="text-decoration:none;">Создатель этого действа в VK</a></p>
+<p class="block2"><a href="https://vk.com/radikc2003" style="text-decoration:none;">Создатель этого действа в VK</a></p>
+<p class="block2"><a href="https://vk.com/radikc2003" style="text-decoration:none;">Создатель этого действа в Discord</a></p>
+<p class="block2"><a style="text-decoration:none;">Эл.адрес: rodyuha0@gmail.com</a></p>
+
 </div>
 <script>
     async function authorization(){
