--- a/Front/howtoplay.html
+++ b/Front/howtoplay.html
@@ -12,13 +12,18 @@
     
 <div class="backButton" onclick="document.location.href='/start'">Назад</div>
 
-<div class="h1">Список скиллов:</div>
-    <div class="h2">FireBall</div>
-    <div class="h3">Наносит немного урона, но главный плюс - поджигает врага.</div>
+<div class="h1">Список скиллов</div>
 
-<div class="h1">Список скиллов:</div>
-    <div class="h2">FireBall</div>
+
+<div class="h1">Маг:</div>
+    <div class="h2">FireBall - огненный шар</div>
     <div class="h3">Наносит немного урона, но главный плюс - поджигает врага.</div>
+    <div class="h2">IceWall - ледяная стена</div>
+    <div class="h3">Ставит новую стену.</div>
+
+<div class="h1">Рыцарь:</div>
+    <div class="h2">EarthQuake - землетрясение</div>
+    <div class="h3">Наносит немного урона игрокам но сшибает стены.</div>
 
 </div>
 </body>
