--- a/Front/gameStart.html
+++ b/Front/gameStart.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
-    <meta name="viewport" content="width=1000, initial-scale=1, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <title>duelige</title>
 </head>
 
@@ -49,7 +49,7 @@
         text-align-last: center;
         border-radius: 10px;
         background: #ffffffcc;
-        height: 80vh;
+        /* height: 80vh; */
         box-shadow: 0px 0px 15px #fff;
         padding: 5vh 20px;
         margin: 5vh 20px 0;
